--- a/.github/workflows/update_json.yml
+++ b/.github/workflows/update_json.yml
@@ -46,7 +46,7 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
           if [ -n "$(git status --porcelain public)" ]; then
-            git add public/regionsdata.json public/industriesdata.json public/dateposteddata.json
+            git add frontend/public/dateposteddata.json frontend/public/industriesdata.json frontend/public/dateposteddata.json
             git commit -m "Auto-update JSON data from SQL [skip ci]" || echo "No changes to commit"
             git push
           else
